# pywcsk

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  claude_plan.md  pyproject.toml  roadmap.md
.github/workflows/: test.yml
.specify/memory/: .markdownlint.yaml  constitution.md  plan.md  spec.md  tasks.md
.specify/scripts/: check_spec_integrity.py
attic/: claude_plan.md
attic/.specify/memory/: plan.md
pywcsk/: __init__.py  cli.py  counter.py
specs/001-cli-skeleton/: plan.md  spec.md  tasks.md
specs/002-count-lines/: plan.md  spec.md  tasks.md
specs/003-count-words/: plan.md  spec.md  tasks.md
specs/004-flag-l/: plan.md  spec.md  tasks.md
specs/005-whitespace-word-splitting/: plan.md  spec.md  tasks.md
specs/006-disallow-multiple-flags/: plan.md  spec.md  tasks.md
specs/007-byte-counting/: plan.md  spec.md  tasks.md
specs/008-combined-flags-lwc/: analysis.md  plan.md  spec.md  tasks.md
specs/009-default-combined-output/: analysis.md  plan.md  spec.md  tasks.md
tests/: test_basic.py  test_cli.py  test_combined_flags.py  test_count_lines.py  test_count_words.py  test_counter.py  test_default_output.py  test_flag_c.py  test_flag_l.py  test_flag_validation.py  test_formatter.py  test_oracle.py  test_whitespace_splitting.py
